--- a/music-library/package.json
+++ b/music-library/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite preview --port 5174",
+    "dev": "vite --port 5174 --host",
     "dev:federation": "vite build --watch --mode development && vite preview --port 5174",
     "build": "vite build",
     "lint": "eslint .",
